--- a/README
+++ b/README
@@ -2,13 +2,16 @@
 プロジェクトタイトル:
   Shooting Spider
 開発者:
-  
+  笹生 憲 ()
+  竹田 健吾 ()
+  津村 耕司 ()
   寺田 晃太朗 (tera@toki.waseda.jp)
 開発時間:
   2012年7月3日~7月16日
 ----------------------------------------------------------------
 
 1) ゲーム内容
+遠くの方でうようよしてる蜘蛛を撃ち落としてスコアポイントを獲得するだけの糞ゲー。
 
 
 2) ファイル
