--- a/README
+++ b/README
@@ -38,7 +38,10 @@ cl /O2 /Wall /Feshooting-spider *.c
 
 
 5) 操作
+上下左右のキーでカーソルを移動
+'s'キーで砲弾
+'q'キーで終了
 
 
-Last updated: 2012/07/11
+Last updated: 2012/07/16
 ----------------------------------------------------------------
