--- a/README
+++ b/README
@@ -12,6 +12,8 @@
 
 1) ゲーム内容
 遠くの方でうようよしてる蜘蛛を撃ち落としてスコアポイントを獲得するだけの糞ゲー。
+持ち弾が50弾あり、使い切るとゲーム終了 (弾発射を連打しまくるとメモリがおかしくなってプログラムが落ちたりキャラクターの色が変わったりする笑)
+ゲーム終了するとアニメーションが表示される。
 
 
 2) ファイル
@@ -40,6 +42,7 @@ cl /O2 /Wall /Feshooting-spider *.c
 5) 操作
 上下左右のキーでカーソルを移動
 's'キーで砲弾
+'n'キーでニューゲーム
 'q'キーで終了
 
 
