--- a/README
+++ b/README
@@ -5,7 +5,7 @@
   A.K ()
   K.T ()
   K.T ()
-  K.T (tera@toki.waseda.jp)
+  寺田　晃太朗 (tera@toki.waseda.jp)
 開発時間:
   2012年7月3日~7月16日
 ----------------------------------------------------------------
